--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "multer": "^2.0.2",
     "next": "15.5.4",
     "papaparse": "^5.5.3",
