--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
